fix workspace height by partially undoing Brandon's change with float, + move turtle slider to be right aligned

--- a/style/common.scss
+++ b/style/common.scss
@@ -64,7 +64,6 @@ html[dir="RTL"] .farSide {
 }
 
 #belowVisualization {
-  float: left;
   width: 400px;
 }
 
